# moni

./: .gitignore  Makefile  main.py  pyproject.toml
bot/: agents.py  aggregator.py  main.py  notifier.py  notifyer.py  pdf_key_checker.py  reports.py  requirements.txt  utils_function.py
common/: config_manager.py
public/: htmx.min.js
web/: app.py
web/routes/: __init__.py  llm.py  mailing_list.py  master.py  notifier.py  schedule.py
web/tailwind/: input.css
web/templates/: base.html  index.html
