[project]
name = "moni"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1",
    "openai>=2.44.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "requests>=2.34.2",
]
